--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
       rel="stylesheet"
     />
     <title>React App</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
