--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,12 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- SPLASH SCREEN "Eso es principalmente para casos con el navegador zafari"-->
+    <!-- <link rel="apple-touch-startup-image" href="/apple-launch-1242x2688.png" /> -->
+    <meta name="appel-mobile-web-app-title" content="Programando ando" />
+    <meta name="appel-mobile-web-app-capable" content="yes" />
+    <meta name="appel-mobile-web-app-status-bar-style" content="black" />
+
     <title>Programando ando</title>
     <title>React App</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
